test/corpus/backtick_fixtures.txt
================================================================================
Fixture backtick-string-eof (htmljs target)
================================================================================

<hello message=`Hello
    ${foo}!></hello>

--------------------------------------------------------------------------------

(document
  (ERROR
    (tag_name)
    (attribute_name)
    (placeholder
      (javascript_fragment))))

================================================================================
Fixture backtick-string-nested-with-space (htmljs target)
================================================================================

<hello message=`${`hi ${name}`}!`></hello>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (tag_name)
        (attribute
          (regular_attribute
            (attribute_name)
            (backtick_attribute_value
              (placeholder
                (javascript_fragment))))))
      (end_tag
        (tag_name)))))

================================================================================
Fixture backtick-string-placeholder-newline (htmljs target)
================================================================================

<hello message=`${
    foo
}!`></hello>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (tag_name)
        (attribute
          (regular_attribute
            (attribute_name)
            (backtick_attribute_value
              (placeholder
                (javascript_fragment))))))
      (end_tag
        (tag_name)))))
