test/corpus/cdata_and_doctype_fixtures.txt
================================================================================
CDATA top-level block
================================================================================

<![CDATA[[if lt IE 9]><div><![endif]]]>

--------------------------------------------------------------------------------

(document
  (cdata))

================================================================================
CDATA inside normal element text flow
================================================================================

<div>
    BEFORE<![CDATA[<within><!-- just text -->]]>AFTER
</div>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (tag_name))
      (text)
      (cdata)
      (text)
      (end_tag
        (tag_name)))))

================================================================================
CDATA nested under element indentation
================================================================================

test
    <foo>
    <![CDATA[[if lt IE 9]><div><![endif]]]>
    </foo>

--------------------------------------------------------------------------------

(document
  (concise_tag
    (tag_name))
  (element
    (normal_element
      (start_tag
        (tag_name))
      (cdata)
      (end_tag
        (tag_name)))))

================================================================================
EOF doctype without closing bracket
================================================================================

<!DOCTYPE html PUBLIC

--------------------------------------------------------------------------------

(document
  (doctype)
  (MISSING ">"))
