test/corpus/concise_fixtures.txt
================================================================================
Fixture concise-block-whitespace-leading (htmljs target)
================================================================================

---
  A ${'B'} C
---

--------------------------------------------------------------------------------

(document
  (concise_fence_block
    (text)
    (placeholder
      (javascript_fragment))
    (text)))

================================================================================
Fixture concise-contentplaceholder-html-start (htmljs target)
================================================================================

-- ${data.name} some html - <b>bold</b>

--------------------------------------------------------------------------------

(document
  (concise_fence_line))

================================================================================
Fixture concise-contentplaceholder-start (htmljs target)
================================================================================

-- ${data.name}

--------------------------------------------------------------------------------

(document
  (concise_fence_line))

================================================================================
Fixture concise-hyphen-after-tag-name (htmljs target)
================================================================================

div - Hello World

--------------------------------------------------------------------------------

(document
  (concise_tag
    (tag_name))
  (text)
  (ERROR))

================================================================================
Fixture concise-line-whitespace-ending (htmljs target)
================================================================================

-- ${value}

--------------------------------------------------------------------------------

(document
  (concise_fence_line))

================================================================================
Fixture concise-multiline-content (htmljs target)
================================================================================

--
hi
--

--
foo

--------------------------------------------------------------------------------

(document
  (concise_fence_line)
  (concise_fence_line)
  (concise_tag
    (tag_name)))
