test/corpus/concise_mode.txt
================================================================================
Concise tags and fences
================================================================================

div.classy [key=a, on-click(ev){ emit(ev) }] ...spread;
-- <span>inline html</span>
---
<p>${name}</p>
---

--------------------------------------------------------------------------------

(document
  (concise_tag
    (tag_name)
    (shorthand_attribute)
    (concise_attribute_group
      (attribute
        (regular_attribute
          (special_attribute_name)
          (attribute_value_fragment)))
      (attribute
        (regular_attribute
          (special_attribute_name)
          (attribute_arguments
            (attribute_arguments_fragment))
          (attribute_method
            (attribute_method_fragment)))))
    (attribute
      (spread_attribute
        (javascript_fragment))))
  (concise_fence_line)
  (concise_fence_block
    (element
      (normal_element
        (start_tag
          (tag_name))
        (placeholder
          (javascript_fragment))
        (end_tag
          (tag_name))))))
